# prexu

./: .editorconfig  .gitattributes  .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOLT_REMOTE.md  FIXES.md  README.md  RELEASE_SETUP.md  ROADMAP.md  TODO.md  bndfltdicvbijhkarfatvupagq3l8mum.darc  index.html  manifest  mise.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  security-scan.yml  update-gist.yml
docs/: adr-native-player-cross-platform.md  adr-native-player-macos.md  adr-native-player-render-api.md  code-signing.md  hw-probe-runbook.md  linux-dev.md  linux-on-hardware-test-plan.md  native-player-status.md  phase1-smoke-test.md  phase2-smoke-test.md  remote-access-setup.md  test-automation-plan.md
e2e/: accessibility.spec.ts  auth-helpers.ts  dashboard.spec.ts  item-detail.spec.ts  library-view.spec.ts  login-flow.spec.ts  mock-tauri.ts  navigation.spec.ts  performance.spec.ts  player-chrome.spec.ts  playlists.spec.ts  regression-fixes.spec.ts  requests-page.spec.ts  responsive-layout.spec.ts  search-flow.spec.ts  settings-page.spec.ts  transitions-races-prefetch.spec.ts  watch-history.spec.ts
relay-server/: Cargo.toml  prexu-relay.service
relay-server/src/: connection.rs  lib.rs  main.rs  messages.rs  plex_auth.rs  server.rs  session.rs  state.rs  tmdb_proxy.rs
relay-server/tests/: integration.rs
scripts/hw-probe/: geometry-x11.nu  lib.nu  log-assert.nu  luminance.nu  probes.nu  run.nu  selftest.nu  verdict.nu
spike/dcomp-capture/: Cargo.toml  RUN.md
spike/dcomp-capture/src/: capture.rs  main.rs
spike/dcomp-hwdec/: .gitignore  Cargo.toml  RUN.md
spike/dcomp-hwdec/src/: capture.rs  egl_angle.rs  main.rs
spike/dcomp-overlay/: Cargo.toml  RUN.md
spike/dcomp-overlay/src/: main.rs
spike/macos-render-compositing/: .gitignore  Cargo.toml  FINDINGS.md  build.rs
spike/macos-render-compositing/evidence/: environment.txt  mpv-hwdec-gl-excerpt.txt
spike/macos-render-compositing/src/: main.rs
spike/macos-webkit-codec-gap/: .gitignore  FINDINGS.md  harness.html  probe-results.json
spike/wayland-render-compositing/: Cargo.toml  FINDINGS.md  build.rs
spike/wayland-render-compositing/src/: main.rs
spike/webview2-hosting/: Cargo.toml  RUN.md
spike/webview2-hosting/src/: main.rs
spike/wv2-tauri-ipc/: Cargo.toml  FORK-PLAN.md  RUN.md
spike/wv2-tauri-ipc/src/: main.rs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/ci/mpv/: .gitignore  README.md
src-tauri/ci/mpv/64/: mpv.lib
src-tauri/nsis-hooks/: hooks.nsh
src-tauri/src/: downloads.rs  lib.rs  util.rs
src-tauri/src/player/: angle_loader.rs  commands.rs  composition_host.rs  events.rs  geometry.rs  host_window.rs  lifecycle.rs  linux_compositor.rs  mod.rs  taskbar_preview.rs  timeline.rs  video_render.rs
src-tauri/src/player/commands/: fullscreen.rs  minimize.rs  mod.rs  playback.rs  popout.rs  win32_monitor.rs
src-tauri/tests/: headless_mpv.rs
src/__tests__/: performance.test.tsx  setup.ts  test-utils.tsx
src/components/: ActivityButton.test.tsx  ActivityButton.tsx  ActivityPanel.tsx  AlphaJumpBar.test.tsx  AlphaJumpBar.tsx  AppLayout.test.tsx  AppLayout.tsx  AudioEnhancementsPanel.test.tsx  AudioEnhancementsPanel.tsx  BackButton.test.tsx  BackButton.tsx  BottomNav.a11y.test.tsx  BottomNav.test.tsx  BottomNav.tsx  ContentRequestForm.test.tsx  ContentRequestForm.tsx  ContextMenu.a11y.test.tsx  ContextMenu.test.tsx  ContextMenu.tsx  EmptyState.test.tsx  EmptyState.tsx  EpisodeExpander.test.tsx  EpisodeExpander.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorState.test.tsx  ErrorState.tsx  FilterBar.test.tsx  FilterBar.tsx  FixMatchDialog.tsx  HeroSlideshow.test.tsx  HeroSlideshow.tsx  HorizontalRow.test.tsx  HorizontalRow.tsx  InviteNotification.test.tsx  InviteNotification.tsx  LibraryGrid.test.tsx  LibraryGrid.tsx  LibraryIcon.test.tsx  LibraryIcon.tsx  (+68 more)
src/constants/: languages.ts
src/contexts/: AppProviders.tsx  PlayerContext.test.tsx  PlayerContext.tsx  QueueContext.test.tsx  QueueContext.tsx
src/hooks/: library-range.test.ts  library-range.ts  useAnnounce.test.ts  useAnnounce.ts  useAsyncData.test.ts  useAsyncData.ts  useAudioEnhancements.test.ts  useAudioEnhancements.ts  useAuth.reResolve.test.ts  useAuth.test.ts  useAuth.ts  useAutoUpdate.ts  useBreakpoint.test.ts  useBreakpoint.ts  useCollections.test.ts  useCollections.ts  useConstrainedFilterOptions.test.ts  useConstrainedFilterOptions.ts  useContentRequests.test.ts  useContentRequests.ts  useDashboard.test.ts  useDashboard.ts  useDashboard.watchStateIntegration.test.ts  useDelayedFlag.test.ts  useDelayedFlag.ts  useDetailItems.test.tsx  useDetailItems.ts  useDetailPrefetch.test.ts  useDetailPrefetch.ts  useDownloads.test.tsx  useDownloads.ts  useFilterOptions.test.ts  useFilterOptions.ts  useFirstCharacter.test.ts  useFirstCharacter.ts  useFixMatch.ts  useFocusTrap.test.ts  useFocusTrap.ts  useFrequentCollaborators.ts  useHoldToSkip.test.ts  (+65 more)
src/pages/: ActorDetail.test.tsx  ActorDetail.tsx  CollectionDetail.test.tsx  CollectionDetail.tsx  CollectionsBrowser.test.tsx  CollectionsBrowser.tsx  Dashboard.test.tsx  Dashboard.tsx  DiscoverDetail.test.tsx  DiscoverDetail.tsx  Downloads.test.tsx  Downloads.tsx  Home.tsx  ItemDetail.test.tsx  ItemDetail.tsx  LibraryView.test.tsx  LibraryView.tsx  Login.test.tsx  Login.tsx  Player.styles.ts  Player.test.tsx  Player.tsx  PlaylistDetail.test.tsx  PlaylistDetail.tsx  PlaylistsBrowser.test.tsx  PlaylistsBrowser.tsx  Requests.test.tsx  Requests.tsx  SearchResults.test.tsx  SearchResults.tsx  ServerSelect.test.tsx  ServerSelect.tsx  Settings.test.tsx  Settings.tsx  WatchHistory.test.tsx  WatchHistory.tsx  player-postplay-gate.test.ts  player-postplay-gate.ts  (+2 more)
src/services/: tmdb.ts  (+38 more)
(+185 files in other folders)
