[package]
name = "prexu-relay"
version = "0.1.0"
edition = "2021"
description = "WebSocket relay server for Prexu Watch Together sessions"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures = "0.3"
