[package]
name = "prexu"
version = "0.6.3"
description = "A custom cross-platform Plex client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "stream"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync"] }
dirs = "6"
futures-util = "0.3"
base64 = "0.22"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
url = "2"
# Default (Linux/macOS): link the system libmpv via pkg-config / `-lmpv`
# (libmpv2-sys emits `cargo:rustc-link-lib=mpv`). The `build_libmpv` feature
# is added ONLY on Windows below, where libmpv is shipped as a vendored DLL
# sourced from MPV_SOURCE rather than a distro package.
libmpv2 = { version = "4" }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows ships a vendored libmpv-2.dll; `build_libmpv` makes libmpv2's build
# script wire MPV_SOURCE into the link search path (see src-tauri/build.rs).
libmpv2 = { version = "4", features = ["build_libmpv"] }
# Raw libmpv FFI for `screenshot-raw` (mpv_command_ret → mpv_node), used to
# source frames for the DWM iconic taskbar/alt-tab preview. Must resolve to
# the same version libmpv2 pins transitively so `Mpv::ctx`'s `mpv_handle`
# type is identical.
libmpv2-sys = "4"
# Pin to the same major.minor as Tauri's transitive `windows` dep so HWND
# types are interchangeable. Bumping requires Tauri to bump too.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
