[package]
name = "prexu"
version = "0.7.1"
description = "A custom cross-platform Plex client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "stream"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync"] }
dirs = "6"
futures-util = "0.3"
base64 = "0.22"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
url = "2"

# libmpv2 backs the native player, which is compiled on Windows AND Linux
# (see src/lib.rs — the `player` module is gated to `any(windows, linux)`).
# macOS and other targets still omit it: a base dependency would emit
# `cargo:rustc-link-lib=mpv` and fail their link with `-lmpv not found`, so the
# dependency lives in per-target tables only.
#
#   - Windows: vendored `libmpv-2.dll`; the `build_libmpv` feature wires
#     MPV_SOURCE into the link search path (see src-tauri/build.rs).
#   - Linux: dynamically links the *system* libmpv (`pkg-config mpv`, ≥2.5.0).
#     libmpv2-sys's default build script emits `cargo:rustc-link-lib=mpv`, which
#     resolves against the distro/AppImage-bundled `libmpv.so` (prexu-axj4.7) —
#     so NO `build_libmpv` feature here.
[target.'cfg(target_os = "windows")'.dependencies]
# Windows ships a vendored libmpv-2.dll; `build_libmpv` makes libmpv2's build
# script wire MPV_SOURCE into the link search path (see src-tauri/build.rs).
libmpv2 = { version = "4", features = ["build_libmpv"] }
# Raw libmpv FFI for `screenshot-raw` (mpv_command_ret → mpv_node), used to
# source frames for the DWM iconic taskbar/alt-tab preview. Must resolve to
# the same version libmpv2 pins transitively so `Mpv::ctx`'s `mpv_handle`
# type is identical.
libmpv2-sys = "4"
# Pin to the same major.minor as Tauri's transitive `windows` dep so HWND
# types are interchangeable. Bumping requires Tauri to bump too.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    # Path C3c (prexu-60mz.3): DirectComposition tree on the main HWND that hosts
    # the visual-hosted WebView2 (and, later, the mpv video visual in C3d).
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_System_Com",
    # Path C3d: harden the process DLL search path + Authenticode-verify the
    # ANGLE DLLs before loading (no sideloading/planting).
    "Win32_System_LibraryLoader",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
] }
# Path C3d: mpv libmpv2 RenderContext over ANGLE (OpenGL ES). khronos-egl is the
# EGL binding; libloading loads the (Authenticode-verified, absolute-path) ANGLE
# DLLs; sha2 pins their exact bytes.
khronos-egl = { version = "6", features = ["dynamic"] }
libloading = "0.8"
sha2 = "0.10"
# Path C3c: ICoreWebView2CompositionController + SetRootVisualTarget, matching
# the version Tauri 2.10 resolves so the controller handed back by
# tauri PlatformWebview::controller() casts cleanly.
webview2-com = "0.38"
# Direct dep purely for `wry::set_pending_composition_hosting` (the composition
# opt-in added to the vendored fork); resolves to vendor/wry via [patch].
wry = "0.54"

# ── Linux native player (prexu-axj4.3): render-API compositing ──
# libmpv render context composited under the transparent WebKitWebView via a
# GtkOverlay + GtkGLArea (see src/player/linux_compositor.rs + the ADR
# docs/adr-native-player-render-api.md). gtk / glib / webkit2gtk are pinned to
# the SAME versions Tauri 2.10 / wry 0.54 already resolve transitively (verified
# against Cargo.lock: gtk 0.18, glib 0.18, webkit2gtk 2.0) so there is exactly
# one GTK stack in the build — a second, mismatched gtk-rs would not interop
# with the widgets wry hands us via gtk_window()/default_vbox()/with_webview().
[target.'cfg(target_os = "linux")'.dependencies]
# System libmpv, no build_libmpv (see the target-windows comment above).
libmpv2 = "4"
gtk = { version = "0.18", features = ["v3_24"] }
glib = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
# setlocale(LC_NUMERIC, "C") before mpv_create (libmpv refuses a non-C numeric
# locale); dlopen of libEGL/libGL for the GL proc-address resolver.
libc = "0.2"
libloading = "0.8"
# Direct dep purely for `wry::set_pending_webview_transparency` (the Linux
# creation-time webview-transparency opt-in added to the vendored fork —
# mirror of the Windows composition-hosting entry above); resolves to
# vendor/wry via [patch].
wry = "0.54"

# Path C3c (prexu-60mz.3): vendored fork of wry to add a WebView2 composition-
# controller hosting path (CreateCoreWebView2CompositionController +
# SetRootVisualTarget) so the React webview can live as a transparent
# DirectComposition visual above the mpv video visual on the main Tauri HWND.
# Pinned to the exact version Tauri 2.10 resolves (0.54.2); the patch must stay
# API-compatible with what Tauri calls. Re-base on wry bumps when Tauri bumps.
[patch.crates-io]
wry = { path = "vendor/wry" }
