# THROWAWAY feasibility spike — beads prexu-k0i2 / Path C2.
#
# Combines C0 (mpv -> DComp video visual) + C1 (WebView2 composition visual) in
# ONE DirectComposition tree on ONE plain top-level window, standalone (outside
# Tauri). Video visual z-below, transparent webview visual z-above. Proves the
# entire Alt-tab-parity goal — UI overlays video with true alpha AND WGC/Alt+Tab
# capture shows BOTH — before any app surgery. DO NOT SHIP.
#
# Deps = union of the C0 and C1 spikes, versions pinned to match src-tauri so the
# mpv_handle / HWND / D3D11 / WebView2 COM types are interchangeable with the app.
[package]
name = "dcomp-overlay-spike"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "dcomp_overlay"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"

# mpv (C0): safe wrapper + raw sys, build_libmpv so the spike links its own libmpv.
libmpv2 = { version = "4", features = ["build_libmpv"] }
libmpv2-sys = "4"

# ANGLE EGL/GLES (C0), loaded dynamically from libEGL.dll at runtime.
khronos-egl = { version = "6", features = ["dynamic"] }
libloading = "0.8"

# WebView2 visual hosting (C1).
webview2-com = "0.38.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
    "Foundation_Metadata",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
]
