# THROWAWAY feasibility spike — beads prexu-60mz.1 / Path C3a.
#
# GATE for the C3 fork-vs-bypass decision. Proves that Tauri's IPC MECHANISM
# survives on a VISUAL-HOSTED (composition controller) WebView2 — i.e. forking
# wry to add a composition path will not break window.__TAURI__ invoke/emit.
#
# Tauri IPC rides entirely on the ICoreWebView2 core object:
#   - AddScriptToExecuteOnDocumentCreated  (Tauri injects its bootstrap)
#   - add_WebMessageReceived               (JS window.ipc.postMessage -> Rust)
#   - PostWebMessageAsString / ExecuteScript (Rust -> JS, invoke response + emit)
# That core is obtained identically from a windowed OR a composition controller,
# so this spike wires those exact primitives on a composition-hosted webview and
# round-trips a message. DO NOT SHIP.
#
# Versions pinned to match src-tauri/Cargo.lock (webview2-com 0.38.2, windows
# 0.61.3) so the result transfers directly to the app's stack.
[package]
name = "wv2-tauri-ipc-spike"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "wv2_tauri_ipc"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
webview2-com = "0.38.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_DirectComposition",
]
